<resources>
    <string name="app_name">Salamtak Patient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="togetstartpickyourlanguage">To Get Start Pick Your Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="salamtakbooking">Salamtak Booking</string>
    <string name="screen_booking_text">Is designed to accommodate an easy way and professional tool to book reservations while furnishing all related information that would be of an interest for both patient and doctor. Nevertheless, reservations confirmation and reminder technique are also part of the features that Salamtak booking provides.</string>
    <string name="skip">Skip</string>
    <string name="salamtakhomebooking">Salamtak Home Visit</string>
    <string name="salamtakconnect">Salamtak Connect</string>
    <string name="choose">choose</string>
    <string name="login">Login</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="lets_start">Lets start</string>
    <string name="mobile_number">mobile number</string>
    <string name="password">Password</string>
    <string name="forgetpasword">Forget Password ?</string>
    <string name="egypt">Egypt</string>
    <string name="doyothaveacount">Don\'t have an acount?</string>
    <string name="signup">Sign up</string>
    <string name="forsupportcallus">For Support Call Us</string>
    <string name="callnumber">17143</string>
    <string name="mobile_number_email">Phone Number or Email</string>
    <string name="send">Send</string>
    <string name="resetpasword">Forget Password</string>
    <string name="verification_code">Please enter the verification code you received from</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new Password</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="full_name_in_english_first_middle_last">Full Name in English (first - middle - last)</string>
    <string name="full_name_in_arabic_first_middle_last">Full Name in Arabic (first - middle - last)</string>
    <string name="e_mail">E-mail</string>
    <string name="have_an_account">Have an account?</string>
    <string name="the_terms_and_conditions">the terms and conditions</string>
    <string name="doctor_profile">Patient profile</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="national_id">National ID</string>
    <string name="nationality">Nationality</string>
    <string name="syndicate_id">Syndicate ID</string>
    <string name="choose_your_specialty">Choose_your_Specialty</string>
    <string name="seniority_level">Seniority level</string>
    <string name="bio_in_english">Bio in English</string>
    <string name="bio_in_arabic">Bio in Arabic</string>
    <string name="stepper_type_tab">Stepper_type_tab</string>
    <string name="enter_english_data_for_your_certificate">Enter English Data for your certificate</string>
    <string name="title_in_english">Title in English</string>
    <string name="description_in_english_optional">Description in English (Optional)</string>
    <string name="title_in_arabic">Title in Arabic</string>
    <string name="description_in_arabic_optional">Description in Arabic (Optional)</string>
    <string name="enter_arabic_data_for_your_certificate">Enter Arabic Data for your certificate</string>
    <string name="enter_the_year_of_obtaining_the_certificate">Enter the year of obtaining the certificate</string>
    <string name="choose_year">Choose year</string>
    <string name="add_another_certificate">+ Add Another Certificate</string>
    <string name="upload_certificate_image">Upload Certificate image</string>
    <string name="front_and_back_national_id_image_is_required">Front and back National ID Image is required</string>
    <string name="upload_front_national_id_image">Upload front national ID image</string>
    <string name="upload_back_national_id_image">Upload back national ID image</string>
    <string name="profession_certificate">Profession Certificate</string>
    <string name="front_and_back_profession_certificate_image_is_required">Front and back Profession Certificate Image is required</string>
    <string name="upload_front_profession_certificate_image">Upload front Profession Certificate image</string>
    <string name="upload_back_profession_certificate_image">Upload back Profession Certificate image</string>
    <string name="syndicate_card">Syndicate Card</string>
    <string name="front_and_back_syndicate_card_image_is_required">Front and back Syndicate Card Image is required</string>
    <string name="upload_front_syndicate_card_image">Upload front Syndicate Card image</string>
    <string name="upload_back_syndicate_card_image">Upload back Syndicate Card image</string>
    <string name="required">" required *"</string>
    <string name="Enter_fullName_english">Enter Full Name in English (first - middle - last)</string>
    <string name="Enter_fullName_Arabic">Enter Full Name in Arabic (first - middle - last)</string>
    <string name="match_email">invalid mail</string>
    <string name="lesstthan6number"><![CDATA[password should be >6]]></string>
    <string name="doesnotmatch">Doesn\'t Match</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_your_nationality">Choose your nationality</string>
    <string name="search_by_name_of_country">Search by name of country</string>
    <string name="powered_by">Powered By</string>
    <string name="salamtak_booking">Salamtak Booking</string>
    <string name="verification_code_will_be_sent_within_1_30">Verification code will be sent within </string>
    <string name="conter">1:30</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="you_must_complete_your_profile_to_can_book_your_doctor">You must complete your profile to can book your doctor</string>
    <string name="salamtak_services">Salamtak Services</string>
    <string name="Clinic_Booking">Clinic Booking</string>
    <string name="Home_Visit">Home Visit</string>
    <string name="Chat">Chat</string>
    <string name="Call">Call</string>
    <string name="Video_Call">Video Call</string>
    <string name="medical_services_directory">Medical Services Directory</string>
    <string name="see_all">See All</string>
    <string name="hospitals">Hospitals</string>
    <string name="polyclinics">Polyclinics</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="laboratories">Laboratories</string>
    <string name="search">Search</string>
    <string name="search_by_doctor_name">Search by doctor name...</string>
    <string name="doctors_found">Doctors Found</string>
    <string name="all">All</string>
    <string name="home">Home</string>
    <string name="my_schedule">My Schedule</string>
    <string name="more">More</string>
    <string name="reviews">Reviews</string>
    <string name="next_available_booking_at_08_nov_from_06_30_pm">Next Available Booking at 08 Nov. from 06:30 PM</string>
    <string name="sub_specialization">Sub specialization</string>
    <string name="book_now">Book Now</string>
    <string name="osama">Osama</string>
    <string name="said">Said</string>
    <string name="click_here_to_edit_your_profile">Click here to edit your profile</string>
    <string name="filter">Filter</string>
    <string name="upcoming">Upcoming</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="address">Address</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="fees">Fees</string>
    <string name="reset">Reset</string>
    <string name="specialization">Specialization</string>
    <string name="choose_specialization">Choose_Specialization</string>
    <string name="choose_sub_specialization">Choose_Sub_Specialization</string>
    <string name="choose_Seniority_Level">Choose Seniority Level</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_area">Choose Area</string>
    <string name="to">To</string>
    <string name="egp">EGP</string>
    <string name="from">From</string>
    <string name="choose_seniority_level">Choose Seniority Level</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="apply">Apply</string>
    <string name="location">Location</string>
    <string name="done">Done</string>
    <string name="occupation">Occupation</string>
    <string name="about_app">About App</string>
    <string name="call_us">Call Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="language">Language</string>
    <string name="sign_out">Sign out</string>
    <string name="old_password">Old Password</string>
    <string name="change_language">Change Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="save_edit">Save Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_info">Profile Info.</string>
    <string name="medical_state">Medical State</string>
    <string name="street">Street</string>
    <string name="building_number">Building Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="hight">Hight</string>
    <string name="weight">Weight</string>
    <string name="blood_group">Blood Type</string>
    <string name="pressure_mm_gg">Pressure ( MM/GG )</string>
    <string name="sugar_level_mg_dl">Sugar Level ( MG/DL )</string>
    <string name="medical_allergies">Medical Allergies</string>
    <string name="food_allergies">Food Allergies</string>
    <string name="other_allergies">Other Allergies</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="current_medication">Current Medication</string>
    <string name="past_medication">Past Medication</string>
    <string name="injuries">Injuries</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="surgeries">Surgeries</string>
    <string name="date">Date</string>
    <string name="appointments_available">Appointments available</string>
    <string name="summary">Summary</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="booking_date_time"><![CDATA[Booking Date & Time]]></string>
    <string name="service">Service</string>
    <string name="total_fees">Total Fees</string>
    <string name="confirm">Confirm</string>
    <string name="sharelink">Sharelink</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="about_doctor">About Doctor</string>
    <string name="doctor_s_clinics">Doctor’s Clinics</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="choose_clinic">Choose Clinic</string>
    <string name="choose_service">Choose Service</string>
    <string name="examination_type">Examination type</string>
    <string name="date_time">Date / Time</string>
    <string name="more_actions">More Actions</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="cancelappointment">CancelAppointment</string>
    <string name="pursed_lip_breathing">Pursed lip breathing</string>
    <string name="readmore">...ReadMore</string>
    <string name="genecology_and_infertility">Genecology and Infertility</string>
</resources>