<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_selectCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:fontFamily="@font/avenirltstd_black"
            android:text="@string/choose_your_nationality"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <AutoCompleteTextView
        android:id="@+id/tv_selectCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:completionThreshold="1"
        android:background="@drawable/bg_auocompleteselector"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:hint="@string/search_by_name_of_country"
        android:minHeight="48dp"
        android:padding="3dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_selectCountry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectCountry">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_chooselang_button"
            android:fontFamily="@font/avenirltstd_black"
            android:padding="5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent=".9"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>